# Flatlined

ASSIGNMENT1/: README.txt
ASSIGNMENT1/PART1/: assignment1_pt1_FS.m  assignment1_pt1_PSDcomputation.m  assignment1_pt1_grand_average.m  assignment1_pt1_timefreq.m  label_vector.m
ASSIGNMENT1/PART2/: README_part2.txt  script2_1_spectrogram.m  script2_4_1_expdecay.m  script2_4_2_dyndecay.m  script2_7_boxplots.m
ass1/: scriplt_4_esteso.m  script_1_spectrogram.m  script_2_featuresmap.m  script_3_classifier.m  script_4_1test.m  script_4_2threshold.m  script_4_3decay.m  script_4_decay.m  script_4_test.m  script_5_threshold.m  script_6_onlinetest.m  script_7_resultscomparison.m
ass1/new_files/: script_1_spectrogram.m  script_2_featuresmap.m  script_7_3.m  (+8 more)
assignment1/: README.docx  assignment1_pt1_ERD_ERS.m  assignment1_pt1_FS.m  assignment1_pt1_PSDcomputation.m  assignment1_pt1_features.m  assignment1_pt1_grand_average.m  assignment1_pt1_preprocessing.m  assignment1_pt1_timefreq.m  label_vector.m
logbandpower/: CMakeLists.txt  README.txt  command.txt  package.xml
logbandpower/cfg/: ChainCfg.yaml
logbandpower/data/: UNKNOWN.20250113.152200.neuromodality.neurotask.gdf  UNKNOWN.20250113.154507.neuromodality.neurotask.gdf  UNKNOWN.20250113.154639.neuromodality.neurotask.gdf  UNKNOWN.20250113.154723.neuromodality.neurotask.gdf
logbandpower/launch/: logbandpower.launch  threshold_on_bandpower.launch
logbandpower/scripts/: bandpower.py  recorder_node.py  thresholding.py  thresholding_node.py
threshold_on_bandpower/: CMakeLists.txt  README.md  command.txt  package.xml
(+15 files in other folders)
